--- a/.github/workflows/build-n-deply.yml
+++ b/.github/workflows/build-n-deply.yml
@@ -1,45 +1,26 @@
-name: Next build-deploy
+name: GitHub Pages deploy
 
 on:
   push:
-    branches: ["main"]
-    
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+    branches: [main]
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-        
-      # a standard step for GitHub actions on Node
-      # https://github.com/actions/setup-node
-      - uses: actions/setup-node@v3
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v1
         with:
-          # update the Node version to meet your needs
-          node-version: 18
-          cache: npm
+          node-version: '18.x'
 
-      - name: Build
-        run: |
-          npm ci
-          npm run deploy
+      - name: Installing my packages
+        run: npm ci
+
+      - name: Build my App
+        run: npm run build && npm run export && touch ./out/.nojekyll
         env:
           NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
           NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
@@ -58,21 +39,9 @@ jobs:
           NEXT_PUBLIC_FIREBASE_ADMIN_AUTH_PROVIDER_X509_CERT_URL: ${{ secrets.NEXT_PUBLIC_FIREBASE_ADMIN_AUTH_PROVIDER_X509_CERT_URL }}
           NEXT_PUBLIC_FIREBASE_ADMIN_CLIENT_X509_CERT_URL: ${{ secrets.NEXT_PUBLIC_FIREBASE_ADMIN_CLIENT_X509_CERT_URL }}
 
-      - name: Deploy to GitHub Pages
-        # uses: JamesIves/github-pages-deploy-action@ba1486788b0490a235422264426c45848eac35c6
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
-          branch: gh-pages
-          folder: out
-          
-      # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+          #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: main # The branch the action should deploy to.
+          FOLDER: out # The folder the action should deploy.
