--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 src/lib/firebase/user-bob-firebase-adminsdk-iak3k-7474a1be00.json
+/Users/hello/Desktop/webdev/user-bob.github.io/src/app/api
