removed read me

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ yarn-error.log*
 next-env.d.ts
 src/lib/firebase/user-bob-firebase-adminsdk-iak3k-7474a1be00.json
 /Users/hello/Desktop/webdev/user-bob.github.io/src/app/api
+/Users/hello/Desktop/webdev/user-bob.github.io/README.md
