--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.2.4",
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
+    "newrelic": "^9.11.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "nookies": "^2.5.2",
