--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
+    "@lottiefiles/react-lottie-player": "^3.5.2",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "firebase": "^9.17.2",
@@ -28,6 +30,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
