--- a/package.json
+++ b/package.json
@@ -11,26 +11,29 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@lottiefiles/react-lottie-player": "^3.5.2",
+    "@next-auth/firebase-adapter": "^2.0.1",
+    "@next/font": "^13.2.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "bcryptjs": "^2.4.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
     "newrelic": "^9.11.0",
     "next": "13.2.4",
-    "next-auth": "^4.20.1",
+    "next-auth": "^4.21.1",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-loading-hook": "^1.0.0",
+    "recharts": "^2.5.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
